force-app/main/default/objects/Account/fields/AccountRegion__c.field-meta.xml
<CustomField>
    <fullName>AccountRegion__c</fullName>
    <formula>CASE(
Nation__c,
&apos;IT&apos;,&apos;ITA&apos;,
&apos;UE&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>