force-app/main/default/objects/Account/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agenzia</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account gestiti</relationshipLabel>
    <relationshipName>Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>