force-app/main/default/objects/Account/fields/AgencyCodeDatamax__c.field-meta.xml
<CustomField>
    <fullName>AgencyCodeDatamax__c</fullName>
    <externalId>true</externalId>
    <label>Codice agenzia Datamax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>