force-app/main/default/objects/Account/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <label>Codice Agente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>