force-app/main/default/objects/Account/fields/CapoGruppo__c.field-meta.xml
<CustomField>
    <fullName>CapoGruppo__c</fullName>
    <label>Capo Gruppo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>