force-app/main/default/objects/Account/fields/CO2Total__c.field-meta.xml
<CustomField>
    <fullName>CO2Total__c</fullName>
    <label>Totale CO2 risparmiata (gCO2/km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>