force-app/main/default/objects/Account/fields/CreateCaseDatamax__c.field-meta.xml
<CustomField>
    <fullName>CreateCaseDatamax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crea caso Datamax</label>
    <type>Checkbox</type>
</CustomField>