force-app/main/default/objects/Account/fields/Customer_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_City__c</fullName>
    <formula>CustomerAddress__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address City</label>
    <type>Text</type>
</CustomField>