force-app/main/default/objects/Account/fields/Customer_Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Country__c</fullName>
    <formula>CustomerAddress__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address Country</label>
    <type>Text</type>
</CustomField>