force-app/main/default/objects/Account/fields/Customer_Address_Numero_Civico__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Numero_Civico__c</fullName>
    <formula>CustomerAddress__r.StreetNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address Numero Civico</label>
    <type>Text</type>
</CustomField>