force-app/main/default/objects/Account/fields/Customer_Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Postal_Code__c</fullName>
    <formula>CustomerAddress__r.ZipCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address Postal Code</label>
    <type>Text</type>
</CustomField>