force-app/main/default/objects/Account/fields/Customer_Address_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_State__c</fullName>
    <formula>CustomerAddress__r.Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address State</label>
    <type>Text</type>
</CustomField>