force-app/main/default/objects/Account/fields/Customer_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Street__c</fullName>
    <formula>CustomerAddress__r.StreetName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Address Street</label>
    <type>Text</type>
</CustomField>