force-app/main/default/objects/Account/fields/CustomerAddress__c.field-meta.xml
<CustomField>
    <fullName>CustomerAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indirizzo Cliente</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Indirizzi</relationshipName>
    <type>Lookup</type>
</CustomField>