force-app/main/default/objects/Account/fields/DatamaxCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>DatamaxCustomerCode__c</fullName>
    <externalId>true</externalId>
    <label>Codice Cliente Datamax</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>