force-app/main/default/objects/Account/fields/Dati_di_contatto_compilati__c.field-meta.xml
<CustomField>
    <fullName>Dati_di_contatto_compilati__c</fullName>
    <formula>IF(
  AND(
    ISBLANK(Email__c),
    ISBLANK(Phone),
    ISBLANK(Phone2__c)
  ),
  IMAGE(&apos;/resource/1633099294000/redicon?&apos;, &apos;red-icon&apos;, 20, 20),
  IMAGE(&apos;/resource/1633093212000/greenicon?&apos;, &apos;green-icon&apos;, 20, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dati di contatto compilati</label>
    <type>Text</type>
</CustomField>