force-app/main/default/objects/Account/fields/ExtractionId__c.field-meta.xml
<CustomField>
    <fullName>ExtractionId__c</fullName>
    <label>Id Estrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>