force-app/main/default/objects/Account/fields/FaxPrefix__c.field-meta.xml
<CustomField>
    <fullName>FaxPrefix__c</fullName>
    <label>Prefisso fax</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dialing_Codes</valueSetName>
    </valueSet>
</CustomField>