force-app/main/default/objects/Account/fields/Fleet__c.field-meta.xml
<CustomField>
    <fullName>Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flotta</label>
    <type>Checkbox</type>
</CustomField>