force-app/main/default/objects/Account/fields/FormaAnagrafica__c.field-meta.xml
<CustomField>
    <fullName>FormaAnagrafica__c</fullName>
    <label>Forma anagrafica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forme_anagrafiche</valueSetName>
    </valueSet>
</CustomField>