force-app/main/default/objects/Account/fields/HasPaymentMethods__c.field-meta.xml
<CustomField>
    <fullName>HasPaymentMethods__c</fullName>
    <formula>NumberPaymentMethods__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ha metodi di pagamento</label>
    <type>Checkbox</type>
</CustomField>