force-app/main/default/objects/Account/fields/IDTERPDatamax__c.field-meta.xml
<CustomField>
    <fullName>IDTERPDatamax__c</fullName>
    <externalId>true</externalId>
    <label>IDTERP Datamax</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>