force-app/main/default/objects/Account/fields/Indirizzo_sede_legale_inserito__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo_sede_legale_inserito__c</fullName>
    <formula>IF(
ISBLANK(CustomerAddress__c),
IMAGE(&apos;/resource/1633099294000/redicon?&apos;, &apos;red-icon&apos;, 20, 20),
IMAGE(&apos;/resource/1633093212000/greenicon?&apos;, &apos;green-icon&apos;, 20, 20)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indirizzo sede legale inserito</label>
    <type>Text</type>
</CustomField>