force-app/main/default/objects/Account/fields/LastSyncDatetime__c.field-meta.xml
<CustomField>
    <fullName>LastSyncDatetime__c</fullName>
    <label>Data/ora ultima sincronizzazione</label>
    <type>DateTime</type>
</CustomField>