force-app/main/default/objects/Account/fields/LegalForm__c.field-meta.xml
<CustomField>
    <fullName>LegalForm__c</fullName>
    <label>Forma giuridica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>