force-app/main/default/objects/Account/fields/LockSync__c.field-meta.xml
<CustomField>
    <fullName>LockSync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock Sync</label>
    <type>Checkbox</type>
</CustomField>