force-app/main/default/objects/Account/fields/MIG_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>MIG_Batch_Id__c</fullName>
    <label>Batch Id Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>