force-app/main/default/objects/Account/fields/MIG_External_Id__c.field-meta.xml
<CustomField>
    <fullName>MIG_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>