force-app/main/default/objects/Account/fields/MIG_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>MIG_Run_Id__c</fullName>
    <label>Run Id Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>