force-app/main/default/objects/Account/fields/MigratedData__c.field-meta.xml
<CustomField>
    <fullName>MigratedData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dato Migrato</label>
    <type>Checkbox</type>
</CustomField>