force-app/main/default/objects/Account/fields/MigrationDate__c.field-meta.xml
<CustomField>
    <fullName>MigrationDate__c</fullName>
    <label>Data Migrazione</label>
    <type>DateTime</type>
</CustomField>