force-app/main/default/objects/Account/fields/MigrationDateLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>MigrationDateLastUpdate__c</fullName>
    <label>Data Migrazione Ultimo Aggiornamento</label>
    <type>DateTime</type>
</CustomField>