force-app/main/default/objects/Account/fields/MobilePrefix__c.field-meta.xml
<CustomField>
    <fullName>MobilePrefix__c</fullName>
    <label>Prefisso cellulare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dialing_Codes</valueSetName>
    </valueSet>
</CustomField>