force-app/main/default/objects/Account/fields/Nation__c.field-meta.xml
<CustomField>
    <fullName>Nation__c</fullName>
    <label>Nazione</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
                <default>true</default>
                <label>Italia</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>DZ</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AI</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <label>Antartide</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Antigua e Barbuda</label>
            </value>
            <value>
                <fullName>AN</fullName>
                <label>Antille Olandesi</label>
            </value>
            <value>
                <fullName>SA</fullName>
                <label>Arabia Saudita</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaigian</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahrein</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgio</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>Bhutan</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Bielorussia</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bosnia-Erzegovina</label>
            </value>
            <value>
                <fullName>BW</fullName>
                <label>Botswana</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>