force-app/main/default/objects/Account/fields/Nome_Rappresentante_Legale__c.field-meta.xml
<CustomField>
    <fullName>Nome_Rappresentante_Legale__c</fullName>
    <formula>Rappresentante_legale__r.FirstName &amp; &quot; &quot; &amp;  Rappresentante_legale__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Rappresentante Legale</label>
    <type>Text</type>
</CustomField>