force-app/main/default/objects/Account/fields/NumberPaymentMethods__c.field-meta.xml
<CustomField>
    <fullName>NumberPaymentMethods__c</fullName>
    <label># Payment Method</label>
    <summaryFilterItems>
        <field>blng__PaymentMethod__c.blng__Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentMethod__c.blng__Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>