force-app/main/default/objects/Account/fields/OpenCaseFromWeb__c.field-meta.xml
<CustomField>
    <fullName>OpenCaseFromWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Case From Web</label>
    <type>Checkbox</type>
</CustomField>