force-app/main/default/objects/Account/fields/PEC__c.field-meta.xml
<CustomField>
    <fullName>PEC__c</fullName>
    <label>PEC</label>
    <type>Email</type>
</CustomField>