force-app/main/default/objects/Account/fields/PrivacyCommerciale__c.field-meta.xml
<CustomField>
    <fullName>PrivacyCommerciale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Marketing</label>
    <type>Checkbox</type>
</CustomField>