force-app/main/default/objects/Account/fields/PrivacyCommercialeTerzi__c.field-meta.xml
<CustomField>
    <fullName>PrivacyCommercialeTerzi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Commerciale Terzi</label>
    <type>Checkbox</type>
</CustomField>