force-app/main/default/objects/Account/fields/PrivacyConsumoEnergia__c.field-meta.xml
<CustomField>
    <fullName>PrivacyConsumoEnergia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profilazione Consumo Energia</label>
    <type>Checkbox</type>
</CustomField>