force-app/main/default/objects/Account/fields/PrivacyContratto__c.field-meta.xml
<CustomField>
    <fullName>PrivacyContratto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Contratto</label>
    <type>Checkbox</type>
</CustomField>