force-app/main/default/objects/Account/fields/PrivacyProfilazioneAcquisto__c.field-meta.xml
<CustomField>
    <fullName>PrivacyProfilazioneAcquisto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy Profilazione Acquisto</label>
    <type>Checkbox</type>
</CustomField>