force-app/main/default/objects/Account/fields/PrivacyProfilazioneConsumo__c.field-meta.xml
<CustomField>
    <fullName>PrivacyProfilazioneConsumo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profilazione preferenze di acquisto</label>
    <type>Checkbox</type>
</CustomField>