force-app/main/default/objects/Account/fields/PrivacyUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>PrivacyUpdateDate__c</fullName>
    <label>Data Aggiornamento Privacy</label>
    <type>DateTime</type>
</CustomField>