force-app/main/default/objects/Account/fields/Rappresentante_legale__c.field-meta.xml
<CustomField>
    <fullName>Rappresentante_legale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rappresentante legale</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Rappresentante legale)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>