force-app/main/default/objects/Account/fields/SdiCode__c.field-meta.xml
<CustomField>
    <fullName>SdiCode__c</fullName>
    <label>Codice SDI</label>
    <length>7</length>
    <type>Text</type>
</CustomField>