force-app/main/default/objects/Account/fields/SFCustomerCode__c.field-meta.xml
<CustomField>
    <fullName>SFCustomerCode__c</fullName>
    <displayFormat>CL-{000000}</displayFormat>
    <label>Codice Cliente Salesforce</label>
    <type>AutoNumber</type>
</CustomField>