force-app/main/default/objects/Account/fields/SplitPayment__c.field-meta.xml
<CustomField>
    <fullName>SplitPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Payment</label>
    <type>Checkbox</type>
</CustomField>