force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( OR(ISPICKVAL(StatusCommodity__c, &quot;Cliente&quot;),ISPICKVAL(StatusMobility__c, &quot;Cliente&quot;)),&quot;Cliente&quot;,
			IF( AND(ISPICKVAL(StatusCommodity__c, &quot;Ex Cliente&quot;),ISPICKVAL(StatusMobility__c, &quot;Ex Cliente&quot;)),&quot;Ex Cliente&quot;,&quot;Prospect&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stato</label>
    <type>Text</type>
</CustomField>