force-app/main/default/objects/Account/fields/StatusCommodity__c.field-meta.xml
<CustomField>
    <fullName>StatusCommodity__c</fullName>
    <label>Stato Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PotenzialeCliente</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>ExCliente</fullName>
                <label>Ex Cliente</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>