force-app/main/default/objects/Account/fields/StatusMobility__c.field-meta.xml
<CustomField>
    <fullName>StatusMobility__c</fullName>
    <label>Stato Mobility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Ex Cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>