force-app/main/default/objects/Account/fields/SyncErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SyncErrorMessage__c</fullName>
    <label>Errore sincronizzazione</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>