force-app/main/default/objects/Account/fields/SyncWithDatamax__c.field-meta.xml
<CustomField>
    <fullName>SyncWithDatamax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SyncWithDatamax</label>
    <type>Checkbox</type>
</CustomField>