force-app/main/default/objects/Account/fields/TipoCapoGruppo__c.field-meta.xml
<CustomField>
    <fullName>TipoCapoGruppo__c</fullName>
    <label>Tipo Capo Gruppo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>