force-app/main/default/objects/Account/fields/UpdateFromDatamax__c.field-meta.xml
<CustomField>
    <fullName>UpdateFromDatamax__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update From Datamax</label>
    <type>Checkbox</type>
</CustomField>