force-app/main/default/objects/Account/fields/VatNumber__c.field-meta.xml
<CustomField>
    <fullName>VatNumber__c</fullName>
    <label>Partita IVA</label>
    <length>11</length>
    <type>Text</type>
</CustomField>