force-app/main/default/objects/Account/validationRules/Fiscal_Code_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Fiscal_Code_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(FiscalCode__c)),
  ISPICKVAL(Nation__c,&apos;IT&apos;),
  OR(
    AND(
      IsPersonAccount,
      NOT(REGEX(FiscalCode__c, &quot;^[a-zA-Z]{6}[0-9]{2}[abcdehlmprstABCDEHLMPRST]{1}[0-9]{2}([a-zA-Z]{1}[0-9]{3})[a-zA-Z]{1}$&quot;))
    ),
    AND(
      NOT(IsPersonAccount),
      NOT(REGEX(FiscalCode__c, &quot;^[a-zA-Z]{6}[0-9]{2}[abcdehlmprstABCDEHLMPRST]{1}[0-9]{2}([a-zA-Z]{1}[0-9]{3})[a-zA-Z]{1}$&quot;)),
      OR(NOT(ISNUMBER(FiscalCode__c)), LEN(FiscalCode__c)&lt;11)
    )
  )
)</errorConditionFormula>
    <errorDisplayField>FiscalCode__c</errorDisplayField>
    <errorMessage>Codice Fiscale non valido</errorMessage>
</ValidationRule>